[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-vlm"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
description = "Federated VLM Fine-tuning with Flower"
dependencies = [
    "flwr[simulation]>=1.25.0",
    "flwr-datasets>=0.5.0",
    "torch==2.9.1",
    "trl==0.8.1",
    "bitsandbytes==0.49.0",
    "scipy==1.13.0",
    "peft==0.6.2",
    "fschat[model-worker,webui]==0.2.35",
    "transformers==4.53.0",
    "sentencepiece==0.2.0",
    "omegaconf==2.3.0",
    "hf-transfer==0.1.8",
    "matplotlib==3.10.8",
    "torchvision>=0.24.1",
    "qwen-vl-utils>=0.0.14",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "gadisa"

[tool.flwr.app.components]
serverapp = "federated_vlm.server_app:app"
clientapp = "federated_vlm.client_app:app"

[tool.flwr.app.config]
dataset.name = "lmms-lab/DocVQA"
dataset.subset = "DocVQA"
model.name = "Qwen/Qwen2.5-VL-3B-Instruct"
model.quantization = 4
model.gradient-checkpointing = true
model.lora.peft-lora-r = 32
model.lora.peft-lora-alpha = 64
model.lora.lora-dropout = 0.05
train.save-every-round = 5
train.learning-rate-max = 5e-5
train.learning-rate-min = 1e-6
train.seq-length = 512
train.training-arguments.output-dir = ""
train.training-arguments.learning-rate = ""
train.training-arguments.per-device-train-batch-size = 16
train.training-arguments.gradient-accumulation-steps = 1
train.training-arguments.logging-steps = 10
train.training-arguments.num-train-epochs = 3
train.training-arguments.max-steps = 10
train.training-arguments.save-steps = 1000 
train.training-arguments.save-total-limit = 10
train.training-arguments.gradient-checkpointing = true
train.training-arguments.lr-scheduler-type = "constant"
strategy.fraction-train = 0.1
strategy.fraction-evaluate = 0.0
num-server-rounds = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 20
options.backend.name = "ray"
options.backend.client-resources.num-cpus = 8
options.backend.client-resources.num-gpus = 1.0

